--- a/коттеджи.html
+++ b/коттеджи.html
@@ -42,7 +42,7 @@
              
           </div>
           </a>
-          <a href="./firstpage.html">
+          <a href="./170.html">
           <div class="card card4">
              
           </div>
